--- a/testimonials.html
+++ b/testimonials.html
@@ -37,7 +37,9 @@
       class="px-40 py-10 flex flex-col items-end w-full bg-[url('/public/banner.png')] bg-no-repeat bg-cover h-full"
     >
       <div class="flex w-full items-center justify-between">
-        <img src="./public/blue-color.svg" alt="" />
+        <a href="index.html">
+          <img src="./public/blue-color.svg" alt="" />
+        </a>
         <nav class="flex items-center justify-center bg-gray-300 rounded-full">
           <ul
             id="menu"
@@ -53,7 +55,7 @@
               <a href="testimonials.html">Who We are</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#target-section">Contact</a>
             </li>
           </ul>
         </nav>
@@ -156,7 +158,7 @@
       </div>
     </section>
     <!-- Form Section -->
-    <section class="px-36 py-28 w-full">
+    <section class="px-36 py-28 w-full" id="target-section">
       <div class="flex w-full">
         <div class="flex flex-col w-3/5 bg-[#3A50B3] p-20 shadow-md rounded-md">
           <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
@@ -168,14 +170,14 @@
           <div class="w-full px-8 pt-24 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
             <div class="flex flex-col w-full">
-              <a href="tel:+12898372548" class="text-white">+1 289 837 2548</a>
-              <a href="tel:+12898372547" class="text-white">+1 289 837 2547</a>
+              <a href="tel:+12898372547" class="text-white text-lg">+1 289 837 2547</a>
+              <a href="tel:+12898372548" class="text-white text-lg">+1 289 837 2548</a>
             </div>
           </div>
           <div class="w-full px-8 pt-24 flex gap-x-6">
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
-              <p class="text-white">
+              <p class="text-white text-lg text-nowrap">
                 2030 Bristol Circle, Suite 210,<br />
                 Oakville, ON - L6H 0H2
               </p>
@@ -261,13 +263,13 @@
           <nav class="w-full flex">
             <ul class="flex flex-col gap-y-1">
               <li>
-                <a href="features.html" class="text-white">Wicked Wipes</a>
+                <a href="index.html" class="text-white">Wicked Wipes</a>
               </li>
               <li><a href="features.html" class="text-white">Features</a></li>
               <li>
-                <a href="features.html" class="text-white">Private Label</a>
+                <a href="private-label.html" class="text-white">Private Label</a>
               </li>
-              <li><a href="features.html" class="text-white">Who We are</a></li>
+              <li><a href="testimonials.html" class="text-white">Who We are</a></li>
             </ul>
           </nav>
         </div>
