--- a/features.html
+++ b/features.html
@@ -93,11 +93,13 @@
           type="video/mp4"
         ></video>
         <div>
-          <img
+          <a href="index.html">
+            <img
             src="./public/blue-color.svg"
             class="flex absolute top-0 left-24 z-[100] p-10"
             alt=""
           />
+          </a>
           <nav
             class="flex justify-center items-center rounded-full bg-gray-300 absolute top-0 right-0 m-10"
           >
@@ -115,7 +117,7 @@
                 <a href="testimonials.html">Who We are</a>
               </li>
               <li>
-                <a href="#">Contact</a>
+                <a href="#target-section">Contact</a>
               </li>
             </ul>
           </nav>
@@ -421,7 +423,7 @@
       </div>
     </section>
     <!-- Form Section -->
-    <section class="px-36 py-28 w-full">
+    <section class="px-36 py-28 w-full" id="target-section">
       <div class="flex w-full">
         <div class="flex flex-col w-3/5 bg-[#3A50B3] p-20 shadow-md rounded-md">
           <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
@@ -433,14 +435,14 @@
           <div class="w-full px-8 pt-24 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
             <div class="flex flex-col w-full">
-              <a href="tel:+12898372548" class="text-white">+1 289 837 2548</a>
-              <a href="tel:+12898372547" class="text-white">+1 289 837 2547</a>
+              <a href="tel:+12898372547" class="text-white text-xl">+1 289 837 2547</a>
+              <a href="tel:+12898372548" class="text-white text-xl">+1 289 837 2548</a>
             </div>
           </div>
           <div class="w-full px-8 pt-24 flex gap-x-6">
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
-              <p class="text-white">
+              <p class="text-white text-xl text-nowrap">
                 2030 Bristol Circle, Suite 210,<br />
                 Oakville, ON - L6H 0H2
               </p>
@@ -527,13 +529,13 @@
           <nav class="w-full flex">
             <ul class="flex flex-col gap-y-1">
               <li>
-                <a href="features.html" class="text-white">Wicked Wipes</a>
+                <a href="index.html" class="text-white">Wicked Wipes</a>
               </li>
               <li><a href="features.html" class="text-white">Features</a></li>
               <li>
-                <a href="features.html" class="text-white">Private Label</a>
+                <a href="private-label.html" class="text-white">Private Label</a>
               </li>
-              <li><a href="features.html" class="text-white">Who We are</a></li>
+              <li><a href="testimonials.html" class="text-white">Who We are</a></li>
             </ul>
           </nav>
         </div>
