--- a/private-label.html
+++ b/private-label.html
@@ -41,6 +41,19 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      .form {
+        width: 100%;
+        background: #fff;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        border-bottom: solid #b2b2b2;
+      }
+      .hovered-design {
+        color: #3a50b3; /* Change to the color you want */
+      }
+    </style>
     <title>Private Label</title>
   </head>
   <body>
@@ -62,7 +75,7 @@
               <a href="testimonials.html">Who We are</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#target-section">Contact</a>
             </li>
           </ul>
         </nav>
@@ -229,7 +242,7 @@
       </div>
     </section>
     <!-- Form Section -->
-    <section class="px-36 py-28 w-full">
+    <section class="px-36 py-28 w-full" id="target-section">
       <div class="flex w-full">
         <div class="flex flex-col w-3/5 bg-[#3A50B3] p-20 shadow-md rounded-md">
           <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
@@ -241,14 +254,14 @@
           <div class="w-full px-8 pt-24 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
             <div class="flex flex-col w-full">
-              <a href="tel:+12898372548" class="text-white">+1 289 837 2548</a>
-              <a href="tel:+12898372547" class="text-white">+1 289 837 2547</a>
+              <a href="tel:+12898372547" class="text-white text-xl">+1 289 837 2547</a>
+              <a href="tel:+12898372548" class="text-white text-xl">+1 289 837 2548</a>
             </div>
           </div>
           <div class="w-full px-8 pt-24 flex gap-x-6">
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
-              <p class="text-white">
+              <p class="text-white text-xl text-nowrap">
                 2030 Bristol Circle, Suite 210,<br />
                 Oakville, ON - L6H 0H2
               </p>
