--- a/features.html
+++ b/features.html
@@ -320,7 +320,7 @@
         <div class="flex w-full justify-center items-center">
           <div class="w-full">
             <div
-              class="bg-[#B5EA72] rounded-full h-56 w-56 flex justify-center items-center"
+              class="bg-[#B5EA72] rounded-full h-56 w-56 flex justify-center items-center slide-in-up"
             >
               <h2 class="text-4xl text-[#3a50b3] font-bold text-center">
                 Innovative
@@ -368,7 +368,7 @@
           </div>
           <div class="w-full flex justify-end">
             <div
-              class="text-4xl text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-56 w-56 text-right flex text-nowrap justify-end items-center"
+              class="text-4xl text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-56 w-56 text-right flex text-nowrap justify-end items-center slide-in-up"
             >
               <h2>Skin-safe <br />Cleaning Solution</h2>
             </div>
@@ -378,7 +378,7 @@
         <div class="flex w-full justify-center items-center pt-16">
           <div class="w-full">
             <div
-              class="text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-56 w-56 text-left flex justify-start items-center"
+              class="text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-56 w-56 text-left flex justify-start items-center slide-in-up"
             >
               <h2>Environmentally Friendly</h2>
             </div>
