removed on scroll animations in mobile view

--- a/testimonials.html
+++ b/testimonials.html
@@ -142,7 +142,7 @@
         </p>
       </div>
       <div
-        class="flex bg-blue-100 my-8 px-64 py-3 rounded-full"
+        class="flex bg-blue-100 my-8 px-32 md:px-64 py-3 rounded-full"
         data-aos="fade-left"
         data-aos-duration="700"
       ></div>
@@ -168,6 +168,8 @@
           and natural products that are good for people and the environment. 
         </p>
       </div>
+
+<!-- Testimonials section -->
       <div class="flex justify-center">
         <div
           class="flex justify-center group md:gap-y-10"
