--- a/testimonials.html
+++ b/testimonials.html
@@ -101,7 +101,7 @@
     <!-- Mobile Menu Drawer -->
     <div
       id="menu-drawer"
-      class="fixed top-0 right-0 h-full w-2/3 bg-white transform translate-x-full transition-transform duration-300 ease-in-out md:hidden"
+      class="fixed top-0 right-0 h-full w-2/3 bg-blue-300 transform translate-x-full transition-transform duration-300 ease-in-out md:hidden"
     >
       <ul class="flex flex-col p-4 space-y-6 text-black text-xl font-normal">
         <li>
@@ -148,7 +148,7 @@
       ></div>
     </section>
     <!-- About Us Section -->
-    <section class="md:px-28 md:py-36">
+    <section class="md:px-28 md:py-10">
       <div
         class="p-4 md:px-24 md:py-16 md:flex justify-between w-full items-center"
       >
@@ -226,7 +226,7 @@
       </div>
     </section>
     <!-- Form Section -->
-    <section class="px-4 md:px-36 py-3 md:py-28 w-full" id="target-section">
+    <section class="px-4 md:px-36 py-3 md:py-16 w-full" id="target-section">
       <div class="flex flex-col md:flex-row w-full">
         <div
           class="flex flex-col justify-around md:w-3/5 bg-[#3A50B3] p-3 md:p-20 shadow-md rounded-md"
